<resources>
    <string name="app_name">Aston</string>
    <string name="welcomes_you_aston">Welcomes you Aston</string>
    <string name="logo_aston">Logo Aston</string>
    <string name="text1"><b>ИТ-решения для развития бизнеса</b></string>
    <string name="text2">Разработка программного обеспечения</string>
    <string name="aboutText"><b>О нас:</b></string>
    <string name="aboutAston">Aston — компания по разработке ПО с полным циклом услуг. Уже 15 лет мы помогаем заказчикам по всему миру трансформировать бизнес, создавая эффективные мобильные решения и десктопные решения.</string>
    <string name="textOffice"><b>Офисы</b></string>
    <string name="officeMoscow">Москва</string>
    <string name="addressOfficeMoscow">Пресненская набережная, д.6, стр. 2, БЦ «Башня Империя», 3 подъезд, 53 этаж, офис 13</string>
    <string name="officeKazan">Казань</string>
    <string name="addressOfficeKazan">ул. Н. Ершова, 76/1, оф. 213</string>
    <string name="officeRostovOnDon">Ростов-на-Дону</string>
    <string name="addressOfficeRostovOnDon">ул. Текучева, 246, 3 этаж</string>
    <string name="officeMinsk">Минск</string>
    <string name="addressOfficeMinsk">пр-т Победителей, 7А</string>
    <string name="officeGomel">Гомель</string>
    <string name="addressOfficeGomel">ул. Советская, 41Б</string>
    <string name="contactsButton">Контакты</string>
    <string name="vacanciesButton">Вакансии</string>
    <string name="galleryButton">Галерея</string>
    <string name="title"><b>Android Trainee</b></string>
    <string name="subtitle">Стажировка по направлению Android</string>
    <string name="authorization">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="button_forgot_password">Забыли пароль?</string>
    <string name="forgot_login">Логин: admin</string>
    <string name="forgot_password">Пароль: 55535</string>
    <string name="error_log_pass">Указан неверный логин и/или пароль</string>
    <string name="done_log_pass">Успешный вход</string>
    <string name="mainPage">Главная</string>
    <string name="vacancies">Вакансии</string>
    <string name="offices">Офисы</string>
    <string name="toolbar_home">Главная страница</string>
    <string name="toolbar_vacancies">Вакансии</string>
    <string name="toolbar_offices">Офисы</string>
    <string name="search">Поиск</string>
    <string name="action_bar_search_button">Поиск</string> />
</resources>