<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.semenov_lesson.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="244dp"
        android:contentDescription="@string/welcomes_you_aston"
        android:scaleType="centerCrop"
        android:src="@drawable/hello_aston"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="12dp" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/logo_aston"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_aston"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_aston"
        app:layout_constraintEnd_toStartOf="@id/text1"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <Space
        android:id="@+id/space1"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:maxWidth="240sp"
        android:padding="4dp"
        android:text="@string/text1"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/text2"
        app:layout_constraintEnd_toStartOf="@id/space1"
        app:layout_constraintStart_toEndOf="@+id/logo_aston"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxWidth="240sp"
        android:paddingStart="4dp"
        android:text="@string/text2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/aboutText"
        app:layout_constraintEnd_toStartOf="@id/space1"
        app:layout_constraintStart_toEndOf="@+id/logo_aston"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aboutText"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/aboutAston"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toEndOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/aboutAston"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aboutAston"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/textOffice"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toEndOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/aboutText" />

    <TextView
        android:id="@+id/textOffice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textOffice"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/flowOffice"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toEndOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/aboutAston" />

    <TextView
        android:id="@+id/officeMoscow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/officeMoscow"
        android:theme="@style/ButtonStyle" />

    <TextView
        android:id="@+id/officeKazan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/officeKazan"
        android:theme="@style/ButtonStyle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/officeRostovOnDon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/officeRostovOnDon"
        android:theme="@style/ButtonStyle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/officeMinsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/officeMinsk"
        android:theme="@style/ButtonStyle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/officeGomel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/officeGomel"
        android:theme="@style/ButtonStyle"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowOffice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="officeMoscow, officeKazan, officeRostovOnDon, officeMinsk, officeGomel"
        app:flow_horizontalBias="0"
        app:flow_horizontalGap="8dp"
        app:flow_horizontalStyle="packed"
        app:flow_verticalGap="4dp"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@id/flowButton"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintStart_toEndOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/textOffice" />

    <Button
        android:id="@+id/contactsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactsButton" />

    <Button
        android:id="@+id/vacanciesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacanciesButton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/galleryButton"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="contactsButton, vacanciesButton, galleryButton"
        app:flow_horizontalGap="12dp"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintStart_toEndOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/flowOffice" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/progressGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="textOffice, flowOffice, flowButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:indeterminateTint="@color/blue"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutAston" />

</androidx.constraintlayout.widget.ConstraintLayout>