<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="244dp"
        android:contentDescription="@string/welcomes_you_aston"
        android:scaleType="centerCrop"
        android:src="@drawable/hello_aston"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="12dp" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/logo_aston"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_aston"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_aston"
        app:layout_constraintEnd_toStartOf="@id/text1"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <Space
        android:id="@+id/space1"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:maxWidth="240sp"
        android:padding="4dp"
        android:text="@string/text1"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/text2"
        app:layout_constraintEnd_toStartOf="@id/space1"
        app:layout_constraintStart_toEndOf="@+id/logo_aston"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxWidth="240sp"
        android:paddingStart="4dp"
        android:text="@string/text2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/aboutText"
        app:layout_constraintEnd_toStartOf="@id/space1"
        app:layout_constraintStart_toEndOf="@+id/logo_aston"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aboutText"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/aboutAston"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toEndOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/aboutAston"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aboutAston"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toEndOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/aboutText" />

</androidx.constraintlayout.widget.ConstraintLayout>